--- a/app/SINE/app/src/main/res/layout/activity_main.xml
+++ b/app/SINE/app/src/main/res/layout/activity_main.xml
@@ -116,7 +116,7 @@
                 android:layout_width="385dp"
                 android:layout_height="127dp"
                 android:background="#90caf9"
-                android:onClick="graphicActivity">
+                android:onClick="searchForGraphicActivity">
 
                 <TextView
                     android:text="@string/info"
