--- a/app/SINE/app/src/main/res/layout/activity_main.xml
+++ b/app/SINE/app/src/main/res/layout/activity_main.xml
@@ -115,8 +115,7 @@
             <RelativeLayout
                 android:layout_width="385dp"
                 android:layout_height="127dp"
-                android:background="#90caf9"
-                android:onClick="searchForGraphicActivity">
+                android:background="#90caf9">
 
                 <TextView
                     android:text="@string/info"
