--- a/app/SINE/app/src/main/res/layout/activity_result.xml
+++ b/app/SINE/app/src/main/res/layout/activity_result.xml
@@ -1,191 +1,239 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_result"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="trabalho.sine.ResultActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@color/colorPrimaryDark"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <ImageButton
-            android:id="@+id/shareBTN"
-            android:onClick="shareClick"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:background="@drawable/ic_to_share"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true" />
+        <LinearLayout
+            android:id="@+id/container_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-        <ImageButton
-            android:id="@+id/favoritoBTN"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:onClick="favoriteClick"
-            android:background="@drawable/ic_favorite_black"
-            android:layout_marginEnd="46dp"
-            android:layout_alignTop="@+id/compartilhar"
-            android:layout_alignParentEnd="true" />
+            <include
+                android:id="@+id/toolbar"
+                layout="@layout/toolbar" />
+        </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="@color/colorPrimaryDark"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true">
+
+
+            <ImageButton
+                android:id="@+id/shareBTN"
+                android:onClick="shareClick"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:background="@drawable/ic_to_share"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true" />
+
+
+            <ImageButton
+                android:id="@+id/favoritoBTN"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:onClick="favoriteClick"
+                android:background="@drawable/ic_favorite_black"
+                android:layout_marginEnd="46dp"
+                android:layout_alignTop="@+id/compartilhar"
+                android:layout_alignParentEnd="true" />
+
+
+        </RelativeLayout>
+
+
+        <TextView
+            android:text=""
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@+id/titleLabel"
+            android:layout_marginStart="27dp"
+            android:id="@+id/titleValue"
+            android:layout_alignBottom="@+id/titleLabel"
+            android:layout_alignTop="@+id/titleLabel" />
+
+
+        <TextView
+            android:text=""
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/moneyLabel"
+            android:layout_alignStart="@+id/titleValue"
+            android:id="@+id/moneyValue" />
+
+
+        <TextView
+            android:text="Cidade: "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/moneyLabel"
+            android:layout_alignStart="@+id/moneyLabel"
+            android:layout_marginTop="23dp"
+            android:id="@+id/cityLabel" />
+
+
+        <TextView
+            android:text=""
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/cityLabel"
+            android:layout_alignStart="@+id/moneyValue"
+            android:id="@+id/cityValue" />
+
+
+        <TextView
+            android:text="Endereço: "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/cityLabel"
+            android:layout_alignStart="@+id/cityLabel"
+            android:layout_marginTop="23dp"
+            android:id="@+id/addressLabel" />
+
+
+        <TextView
+            android:text=""
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/addressLabel"
+            android:layout_alignStart="@id/cityValue"
+            android:layout_toEndOf="@+id/titleValue"
+            android:id="@+id/addressValue" />
+
+
+        <TextView
+            android:text="Empresa: "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/addressLabel"
+            android:layout_alignStart="@+id/addressLabel"
+            android:layout_marginTop="23dp"
+            android:id="@+id/companyLabel" />
+
+
+        <TextView
+            android:text=""
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/companyLabel"
+            android:layout_alignStart="@id/addressValue"
+            android:layout_toEndOf="@+id/cityValue"
+            android:id="@+id/companyValue" />
+
+
+        <TextView
+            android:text="Função: "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/companyLabel"
+            android:layout_alignStart="@+id/companyLabel"
+            android:layout_marginTop="23dp"
+            android:id="@+id/functionLabel" />
+
+
+        <TextView
+            android:text=""
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/functionLabel"
+            android:layout_alignStart="@id/companyValue"
+            android:layout_toEndOf="@+id/companyValue"
+            android:id="@+id/functionValue" />
+
+
+        <TextView
+            android:text="Descrição: "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/functionLabel"
+            android:layout_alignStart="@+id/functionLabel"
+            android:layout_marginTop="23dp"
+            android:id="@+id/descriptionLabel" />
+
+
+        <TextView
+            android:text=""
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/descriptionLabel"
+            android:layout_alignStart="@id/functionValue"
+            android:layout_toEndOf="@+id/addressValue"
+            android:id="@+id/descriptionValue" />
+
+
+        <TextView
+            android:text="Url: "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/urLabel"
+            android:layout_alignTop="@+id/openLinkImage"
+            android:layout_alignStart="@+id/descriptionLabel" />
+
+
+        <TextView
+            android:text=""
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/urlValue"
+            android:layout_alignTop="@+id/openLinkImage"
+            android:layout_toEndOf="@+id/descriptionValue" />
+
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/openlink"
+            android:layout_marginStart="52dp"
+            android:onClick="openLink"
+            android:id="@+id/openLinkImage"
+            android:layout_below="@+id/descriptionValue"
+            android:layout_toEndOf="@+id/urlValue"
+            android:layout_marginTop="24dp" />
+
+        <TextView
+            android:text="Salário: "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="47dp"
+            android:id="@+id/moneyLabel"
+            android:layout_below="@+id/titleLabel"
+            android:layout_alignStart="@+id/titleLabel" />
+
+        <TextView
+            android:text="Título: "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:id="@+id/titleLabel"
+            android:layout_below="@+id/container_toolbar"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="22dp" />
+
 
     </RelativeLayout>
 
-    <TextView
-        android:text="Título: "
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="34dp"
-        android:id="@+id/titleLabel" />
-
-    <TextView
-        android:text=""
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toEndOf="@+id/titleLabel"
-        android:layout_marginStart="27dp"
-        android:id="@+id/titleValue"
-        android:layout_alignBottom="@+id/titleLabel"
-        android:layout_alignTop="@+id/titleLabel" />
-
-    <TextView
-        android:text="Salário: "
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/titleLabel"
-        android:layout_alignStart="@+id/titleLabel"
-        android:layout_marginTop="23dp"
-        android:id="@+id/moneyLabel" />
-
-    <TextView
-        android:text=""
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/moneyLabel"
-        android:layout_alignStart="@+id/titleValue"
-        android:id="@+id/moneyValue" />
-
-    <TextView
-        android:text="Cidade: "
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/moneyLabel"
-        android:layout_alignStart="@+id/moneyLabel"
-        android:layout_marginTop="23dp"
-        android:id="@+id/cityLabel" />
-
-    <TextView
-        android:text=""
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/cityLabel"
-        android:layout_alignStart="@+id/moneyValue"
-        android:id="@+id/cityValue" />
-
-    <TextView
-        android:text="Endereço: "
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/cityLabel"
-        android:layout_alignStart="@+id/cityLabel"
-        android:layout_marginTop="23dp"
-        android:id="@+id/addressLabel" />
-
-    <TextView
-        android:text=""
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/addressLabel"
-        android:layout_alignStart="@id/cityValue"
-        android:layout_toEndOf="@+id/titleValue"
-        android:id="@+id/addressValue" />
-
-    <TextView
-        android:text="Empresa: "
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/addressLabel"
-        android:layout_alignStart="@+id/addressLabel"
-        android:layout_marginTop="23dp"
-        android:id="@+id/companyLabel" />
-
-    <TextView
-        android:text=""
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/companyLabel"
-        android:layout_alignStart="@id/addressValue"
-        android:layout_toEndOf="@+id/cityValue"
-        android:id="@+id/companyValue" />
-
-    <TextView
-        android:text="Função: "
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/companyLabel"
-        android:layout_alignStart="@+id/companyLabel"
-        android:layout_marginTop="23dp"
-        android:id="@+id/functionLabel" />
-
-    <TextView
-        android:text=""
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/functionLabel"
-        android:layout_alignStart="@id/companyValue"
-        android:layout_toEndOf="@+id/companyValue"
-        android:id="@+id/functionValue" />
-
-    <TextView
-        android:text="Descrição: "
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/functionLabel"
-        android:layout_alignStart="@+id/functionLabel"
-        android:layout_marginTop="23dp"
-        android:id="@+id/descriptionLabel" />
-
-    <TextView
-        android:text=""
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/descriptionLabel"
-        android:layout_alignStart="@id/functionValue"
-        android:layout_toEndOf="@+id/addressValue"
-        android:id="@+id/descriptionValue" />
-
-    <TextView
-        android:text="Url: "
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/urLabel"
-        android:layout_alignTop="@+id/openLinkImage"
-        android:layout_alignStart="@+id/descriptionLabel" />
-
-    <TextView
-        android:text=""
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/urlValue"
-        android:layout_alignTop="@+id/openLinkImage"
-        android:layout_toEndOf="@+id/descriptionValue" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/openlink"
-        android:layout_marginStart="55dp"
-        android:onClick="openLink"
-        android:id="@+id/openLinkImage"
-        android:layout_below="@+id/descriptionValue"
-        android:layout_toEndOf="@+id/urlValue" />
 
 
-</RelativeLayout>
+
+    <fragment
+        android:id="@+id/fragment_navigation_drawer_result"
+        android:name="trabalho.sine.activity.FragmentDrawer"
+        android:layout_width="@dimen/nav_drawer_width"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:layout="@layout/fragment_navigation_drawer"
+        tools:layout="@layout/fragment_navigation_drawer" />
+</android.support.v4.widget.DrawerLayout>
