--- a/app/SINE/app/src/main/res/values/dimens.xml
+++ b/app/SINE/app/src/main/res/values/dimens.xml
@@ -4,5 +4,6 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="font_size_activity_graphic_title">20sp</dimen>
     <dimen name="font_size_activity_graphic">18sp</dimen>
+    <dimen name="font_view_about">20sp</dimen>
     <dimen name="nav_drawer_width">260dp</dimen>
 </resources>
