--- a/app/SINE/app/src/main/res/layout/activity_search.xml
+++ b/app/SINE/app/src/main/res/layout/activity_search.xml
@@ -14,7 +14,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-    <LinearLayout
+        <LinearLayout
         android:id="@+id/container_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -25,26 +25,33 @@
             layout="@layout/toolbar" />
     </LinearLayout>
 
-        <Button
-            android:text="Filtro"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="filterClick"
-            android:id="@+id/filterButton"
-            android:layout_marginTop="14dp"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true" />
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/list_empregos"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:scrollbars="vertical"
-        android:fadeScrollbars="true"
-        android:scrollbarAlwaysDrawVerticalTrack="true"
-        android:layout_alignParentBottom="true"
-        android:layout_below="@+id/favoriteButton" />
+            <Button
+                android:text="Filtro"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:onClick="filterClick"
+                android:id="@+id/filterButton"
+                android:layout_marginTop="14dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true" />
+
+            <android.support.v7.widget.RecyclerView
+            android:id="@+id/list_empregos"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="15dp"
+            android:scrollbars="vertical"
+            android:fadeScrollbars="true"
+            android:scrollbarAlwaysDrawVerticalTrack="true"
+            android:layout_alignParentBottom="true"
+            android:layout_below="@+id/favoriteButton" />
+
+        </LinearLayout>
 
 
     </LinearLayout>
